# emane-jammer-simple

./: .gitignore  COPYING  MANIFEST.in  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  emane-jammer-simple  emane-jammer-simple.spec.in  otapublisherscenario.xml  setup.py  setup.py.in
debian/: changelog.in  control  rules
emane_jammer_simple/service/: emane-jammer-simple.proto  plugin.py
emane_jammer_simple/service/schema/: service.xsd
scripts/: emane-jammer-simple  emane-jammer-simple-control  emane-jammer-simple-service
